Revert "Downgrade to Java 8 (#1)"
This reverts commit 1258ae9469ab356ba5f8275edf14ffc8a7ae8c0c.