@@ -2,18 +2,17 @@ package inga.jvmdependencyloader.buildtool;
 
 import inga.jvmdependencyloader.Artifact;
 
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.*;
-import java.util.*;
-import java.util.regex.Matcher;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class Gradle implements BuildTool {
     private final Path gradleHome;
@@ -37,7 +36,7 @@ public class Gradle implements BuildTool {
 
     @Override
     public List<Path> findCompiledClassPaths() {
-        return Arrays.asList(
+        return List.of(
                 subProjectPath.resolve("build/classes/java/main"),
                 subProjectPath.resolve("build/classes/kotlin/main")
         );
@@ -49,26 +48,26 @@ public class Gradle implements BuildTool {
             return Collections.emptyList();
         }
         try {
-            Process process = new ProcessBuilder(
+            var process = new ProcessBuilder(
                     "./gradlew", "-q", "dependencies", "--configuration", "compileClasspath")
                     .directory(rootProjectPath.toFile())
                     .start();
-            int exitCode = process.waitFor();
+            var exitCode = process.waitFor();
             if (exitCode != 0) {
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+                try (var reader = process.errorReader()) {
                     System.err.println(reader.lines().collect(Collectors.joining(System.lineSeparator())));
                 }
                 return Collections.emptyList();
             }
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                ArrayList<Artifact> results = new ArrayList<>();
-                for (String line : reader.lines().collect(Collectors.toList())) {
-                    Matcher matcher = artifactPattern.matcher(line);
+            try (var reader = process.inputReader()) {
+                var results = new ArrayList<Artifact>();
+                for (var line : reader.lines().toList()) {
+                    var matcher = artifactPattern.matcher(line);
                     if (matcher.find()) {
                         results.add(new Artifact(matcher.group(1), matcher.group(2), matcher.group(3)));
                     }
                 }
-                return results.stream().distinct().collect(Collectors.toList());
+                return results.stream().distinct().toList();
             }
         } catch (IOException | InterruptedException e) {
             throw new IllegalArgumentException(e);
@@ -76,23 +75,23 @@ public class Gradle implements BuildTool {
     }
 
     private URL findJarUrl(Artifact artifact) {
-        Path caches = System.getenv("GRADLE_RO_DEP_CACHE") == null
+        var caches = System.getenv("GRADLE_RO_DEP_CACHE") == null
                 ? gradleHome.resolve("caches")
-                : Paths.get(System.getenv("GRADLE_RO_DEP_CACHE"));
-        String pattern = "glob:"
+                : Path.of(System.getenv("GRADLE_RO_DEP_CACHE"));
+        var pattern = "glob:"
                 + String.join(
                 File.separator,
                 caches.toString(),
                 "modules-*",
                 "files-*",
-                artifact.getGroupId(),
-                artifact.getArtifactId(),
-                artifact.getVersion(),
+                artifact.groupId(),
+                artifact.artifactId(),
+                artifact.version(),
                 "*",
-                artifact.getArtifactId() + '-' + artifact.getVersion() + ".jar");
-        try (Stream<Path> stream = Files.walk(caches, 7)) {
-            PathMatcher matcher = FileSystems.getDefault().getPathMatcher(pattern);
-            Path path = stream.filter(matcher::matches).findFirst().orElse(null);
+                artifact.artifactId() + '-' + artifact.version() + ".jar");
+        try (var stream = Files.walk(caches, 7)) {
+            var matcher = FileSystems.getDefault().getPathMatcher(pattern);
+            var path = stream.filter(matcher::matches).findFirst().orElse(null);
             return path == null ? null : path.toUri().toURL();
         } catch (IOException e) {
             throw new IllegalArgumentException(e);
