@@ -1,11 +1,8 @@
 package inga.jvmdependencyloader.buildtool;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.*;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -21,17 +18,17 @@ public class Maven implements BuildTool {
 
     @Override
     public URLClassLoader load() {
-        return new URLClassLoader(getJarUrls().toArray(new URL[0]));
+        return new URLClassLoader(getJarUrls().toArray(URL[]::new));
     }
 
     @Override
     public List<Path> findCompiledClassPaths() {
-        return Collections.singletonList(root.resolve("target/classes"));
+        return List.of(root.resolve("target/classes"));
     }
 
     private List<URL> getJarUrls() {
         try {
-            Process process = new ProcessBuilder(
+            var process = new ProcessBuilder(
                     "mvn",
                     "dependency:build-classpath",
                     "-DincludeScope=compile",
@@ -39,17 +36,17 @@ public class Maven implements BuildTool {
                     "-q")
                     .directory(root.toFile())
                     .start();
-            int exitCode = process.waitFor();
+            var exitCode = process.waitFor();
             if (exitCode != 0) {
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+                try (var reader = process.errorReader()) {
                     System.err.println(reader.lines().collect(Collectors.joining(System.lineSeparator())));
                 }
                 return Collections.emptyList();
             }
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                ArrayList<URL> results = new ArrayList<>();
-                for (String path : reader.lines().flatMap(l -> Arrays.stream(l.split(":"))).collect(Collectors.toList())) {
-                    results.add(Paths.get(path).toUri().toURL());
+            try (var reader = process.inputReader()) {
+                var results = new ArrayList<URL>();
+                for (var path : reader.lines().flatMap(l -> Arrays.stream(l.split(":"))).toList()) {
+                    results.add(Path.of(path).toUri().toURL());
                 }
                 return results;
             }
